add dropdown on footer

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -23,11 +23,17 @@
                     <img src="assets/img/Group577.png" class="mr-2"/>
                 </p>
             </div>
+
             <div class="column">     
-                <div class="columns is-mobile">
+                <div class="columns is-mobile is-multiline">
                     <div class="column is-full-mobile">                        
                         <div class="widget">
-                            <h3 style="text-decoration: underline;">Company</h3>
+                            <h3 style="text-decoration: underline;">
+                                Company
+                                <span>
+                                    <img src="assets/img/arrow-dropdown.png" class="is-pulled-right	"/>
+                                </span>
+                            </h3>
                             <ul>
                                 <li><a href="#">About</a></li>
                                 <li><a href="#">Careers</a></li>
@@ -43,7 +49,12 @@
 
                     <div class="column is-full-mobile">
                         <div class="widget">
-                            <h3 style="text-decoration: underline;">Individual</h3>
+                            <h3 style="text-decoration: underline;">
+                                Individual
+                                <span>
+                                    <img src="assets/img/arrow-dropdown.png" class="is-pulled-right	"/>
+                                </span>
+                            </h3>
                             <ul>
                                 <li><a href="#">Buy & sell</a></li>
                                 <li><a href="#">Earn free crypto</a></li>
@@ -53,9 +64,14 @@
                         </div>
                     </div>
 
-                    <div class="column is-half-mobile">
+                    <div class="column is-full-mobile">
                         <div class="widget">
-                            <h3 style="text-decoration: underline;">Supports</h3>
+                            <h3 style="text-decoration: underline;">
+                                Supports
+                                <span>
+                                    <img src="assets/img/arrow-dropdown.png" class="is-pulled-right	"/>
+                                </span>
+                            </h3>
                             <ul>
                                 <li><a href="#">Help center</a></li>
                                 <li><a href="#">Cotnact us</a></li>
@@ -70,9 +86,14 @@
                 </div> 
 
                 <div class="columns">
-                    <div class="column is-half-mobile">                        
+                    <div class="column is-full-mobile">                        
                         <div class="widget">
-                            <h3 style="text-decoration: underline;">Learn</h3>
+                            <h3 style="text-decoration: underline;">
+                                Learn 
+                                <span>
+                                    <img src="assets/img/arrow-dropdown.png" class="is-pulled-right	"/>
+                                </span>
+                            </h3>
                             <ul>
                                 <li><a href="#">Crypto basic</a></li>
                                 <li><a href="#">Tips & tutorial</a></li>
@@ -86,9 +107,14 @@
                         </div>
                     </div>
 
-                    <div class="column is-half-mobile">
+                    <div class="column is-full-mobile">
                         <div class="widget">
-                            <h3 style="text-decoration: underline;">Business</h3>
+                            <h3 style="text-decoration: underline;">
+                                Business 
+                                <span>
+                                    <img src="assets/img/arrow-dropdown.png" class="is-pulled-right	"/>
+                                </span>
+                            </h3>
                             <ul>
                                 <li><a href="#">Prime</a></li>
                                 <li><a href="#">Custody</a></li>
@@ -98,9 +124,15 @@
                         </div>
                     </div>
 
-                    <div class="column is-half-mobile">
-                        <div class="widget">
-                            <h3 style="text-decoration: underline;">Developers</h3>
+                    <div class="column is-full-mobile">
+                        <div class="widget">         
+                            <h3 style="text-decoration: underline;">
+                                Developers 
+                                <span>
+                                    <img src="assets/img/arrow-dropdown.png" class="is-pulled-right	"/>
+                                </span>
+                            </h3>
+                            
                             <ul>
                                 <li><a href="#">Cloud</a></li>
                                 <li><a href="#">Connect</a></li>
@@ -111,14 +143,11 @@
                                 <li><a href="#">Rassetta</a></li>
                                 <li><a href="#">USDC</a></li>
                             </ul>
-                        </div>
+                        </div>                 
                     </div>         
                 </div>
-
             </div>
         </div>
     </div>
-
-    <p class="copyrightbar">copyright 2020 All right reserved</p>
-
+    <p class="copyrightbar">Copyright 2020 All right reserved</p>
 </footer>
