--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,26 +1,30 @@
-<header>
-  <nav class="container" role="navigation" aria-label="main navigation">
-      <div class="columns is-mobile">        
-        <div class="column is-full-mobile">
-          <div class="moon-navbar-burger">
-            <img src="assets/img/menu-burger.png" alt="toggle" class="image">
-          </div>
-          
-          <div class="logo">
-            <img src="assets/img/logo.png" style="max-height: 3rem; margin: 0 auto!important;"/>
-          </div>
-        </div>
-        <div class="column is-three-quarters-tablet">
-          <div class="navbar-end">
-            <div class="nav-menu-items">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Features</a>
-                <a href="#">Blog</a>
-                <a href="#">Contact</a>
-            </div>
-          </div>          
-        </div>
+<nav class="navbar is-transparent">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="https://versions.bulma.io/0.7.0">
+      <img src="assets/img/logo.png" style="max-height: 3rem; margin: 0 auto!important;">
+    </a>
+    <div class="navbar-burger burger" data-target="navbar-collapse">
+      <img src="assets/img/menu-burger.png" alt="toggle" class="image">
+    </div>
+  </div>
+
+  <div id="navbar-collapse" class="navbar-menu">
+    <div class="navbar-end">
+      <div class="navbar-item">
+        <a href="#">Home</a>
       </div>
-    </nav>    
-</header>
+      <div class="navbar-item">
+        <a href="#">About</a>
+      </div>
+      <div class="navbar-item">
+        <a href="#">Features</a>
+      </div>
+      <div class="navbar-item">
+        <a href="#">Blog</a>
+      </div>
+      <div class="navbar-item">
+        <a href="#">Contact</a>
+      </div>
+    </div>
+  </div>
+</nav>
